architect/lesson07/kubernetis/_old/_stresstest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vadim-shtukan-l7-stresstes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vadim-shtukan-l7-stresstes-app
  template:
    metadata:
      labels:
        app: vadim-shtukan-l7-stresstes-app
    spec:
      containers:
        - name: vadim-shtukan-l7-stresstes
          image: vadimshtukan/otus-sa-l7-stresstest:0.0.2
