architect/lesson07/kubernetis/_old/app-ingress-l5.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vadim-shtukan-l5-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp($|/)(.*)
            backend:
              serviceName: vadim-shtukan-l5-service
              servicePort: 80
